fix missing color icon bug

--- a/styles/scss/components/Station.scss
+++ b/styles/scss/components/Station.scss
@@ -240,13 +240,13 @@
       }
     }
 
-    &--9A6324
+    &--9a6324
     {
-      color: #9A6324;
+      color: #9a6324;
 
       &::before
       {
-        background-color: #9A6324;
+        background-color: #9a6324;
       }
     }
 
